Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-8530] ReactiveCocoa in the source compat suite doesn't build in Debug mode #51049

Closed
belkadan opened this issue Aug 13, 2018 · 4 comments
Closed
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself crash Bug: A crash, i.e., an abnormal termination of software regression source compatibility swift 5.0

Comments

@belkadan
Copy link
Contributor

Previous ID SR-8530
Radar None
Original Reporter @belkadan
Type Bug
Status Resolved
Resolution Done
Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, 5.0Regression, CompilerCrash, SourceCompatibility
Assignee @DougGregor
Priority Medium

md5: f803d9b9a234659d6623b3e733509f56

Issue Description:

./runner.py --swift-branch master --projects projects.json --include-actions 'action.startswith("Build")' --include-repos 'path == "ReactiveCocoa"' --verbose --build-config debug --swiftc path/to/swiftc

Assertion failed: (lazyResolver && "Cannot resolve inherited type at this point"), function evaluate, file /Volumes/Data/swift-public/swift/lib/Sema/TypeCheckRequestFunctions.cpp, line 75.
Stack dump:
0.  Program arguments: [snip]
1.  While emitting IR SIL function "@$S13ReactiveSwift0A0V0A5CocoaSo8UISwitchCRbzlE7toggledAD0C6ActionCyxGSgvgAkJ6action_So15UIControlEventsV07controlI0AA10Disposable_p10disposabletSgXEfU_AkjL_AnoaP_pAQt_tXEfU_".
 for expression at [/Volumes/Data/swift-source-compat-suite/project_cache/ReactiveCocoa/ReactiveCocoa/UIKit/iOS/UISwitch.swift:11:25 - line:13:5] RangeText="{ info in
                    return info.controlEvents == .valueChanged ? info.action : nil
                }"
2.  While evaluating request SuperclassTypeRequest(ReactiveCocoa.(file).CocoaAction@/Volumes/Data/swift-source-compat-suite/project_cache/ReactiveCocoa/ReactiveCocoa/CocoaAction.swift:7:20)
3.  While evaluating request InheritedTypeRequest(ReactiveCocoa.(file).CocoaAction@/Volumes/Data/swift-source-compat-suite/project_cache/ReactiveCocoa/ReactiveCocoa/CocoaAction.swift:7:20, 0)
0  swift                    0x0000000111a6c7a8 llvm::sys::PrintStackTrace(llvm::raw_ostream&) + 40
1  swift                    0x0000000111a6ba35 llvm::sys::RunSignalHandlers() + 85
2  swift                    0x0000000111a6cdb2 SignalHandler(int) + 258
3  libsystem_platform.dylib 0x00007fff67fbbc4d _sigtramp + 29
4  swift                    0x0000000112d2c140 cmark_strbuf__initbuf + 134003
5  libsystem_c.dylib        0x00007fff67e7a301 abort + 127
6  libsystem_c.dylib        0x00007fff67e42946 __assert_rtn + 320
7  swift                    0x000000010ef78170 swift::InheritedTypeRequest::evaluate(swift::Evaluator&, llvm::PointerUnion<swift::TypeDecl*, swift::ExtensionDecl*>, unsigned int) const + 592
8  swift                    0x000000010f232cfb swift::InheritedTypeRequest::OutputType swift::Evaluator::getResultUncached<swift::InheritedTypeRequest>(swift::InheritedTypeRequest const&) + 523
9  swift                    0x000000010f21b8c7 swift::InheritedTypeRequest::OutputType swift::Evaluator::operator()<swift::InheritedTypeRequest>(swift::InheritedTypeRequest const&) + 151
10 swift                    0x000000010ef781fe swift::SuperclassTypeRequest::evaluate(swift::Evaluator&, swift::NominalTypeDecl*) const + 110
11 swift                    0x000000010f235b6e swift::SuperclassTypeRequest::OutputType swift::Evaluator::getResultUncached<swift::SuperclassTypeRequest>(swift::SuperclassTypeRequest const&) + 526
12 swift                    0x000000010f227316 swift::SuperclassTypeRequest::OutputType swift::Evaluator::operator()<swift::SuperclassTypeRequest>(swift::SuperclassTypeRequest const&) + 150
13 swift                    0x000000010f22fc5f swift::ClassDecl::getSuperclass() const + 63
14 swift                    0x000000010f2e2dcb swift::TypeBase::getSuperclass(bool) + 123
15 swift                    0x000000010e1b275e swift::irgen::ClassMetadataVisitor<swift::irgen::ClassMetadataLayout::ClassMetadataLayout(swift::irgen::IRGenModule&, swift::ClassDecl*)::Scanner>::addClassMembers(swift::ClassDecl*, swift::Type) + 46
16 swift                    0x000000010e1b15a7 swift::irgen::ClassMetadataLayout::ClassMetadataLayout(swift::irgen::IRGenModule&, swift::ClassDecl*) + 391
17 swift                    0x000000010e1b0bc5 swift::irgen::IRGenModule::getMetadataLayout(swift::NominalTypeDecl*) + 341
18 swift                    0x000000010e1b11b6 emitLoadOfGenericRequirement(swift::irgen::IRGenFunction&, llvm::Value*, swift::NominalTypeDecl*, unsigned int, llvm::Type*) + 38
19 swift                    0x000000010e11b07a swift::irgen::MetadataPath::followComponent(swift::irgen::IRGenFunction&, swift::irgen::LocalTypeDataKey&, swift::irgen::MetadataResponse, swift::irgen::MetadataPath::Component, swift::irgen::DynamicMetadataRequest) + 682
20 swift                    0x000000010e11aae7 swift::irgen::MetadataPath::follow(swift::irgen::IRGenFunction&, swift::irgen::LocalTypeDataKey, swift::irgen::MetadataResponse, swift::EncodedSequence<swift::irgen::MetadataPath::Component>::iterator, swift::EncodedSequence<swift::irgen::MetadataPath::Component>::iterator, swift::irgen::DynamicMetadataRequest, swift::EncodedSequence<swift::irgen::MetadataPath::Component>::Map<swift::irgen::MetadataResponse>*) + 1303
21 swift                    0x000000010e11a590 swift::irgen::MetadataPath::followFromTypeMetadata(swift::irgen::IRGenFunction&, swift::CanType, swift::irgen::MetadataResponse, swift::irgen::DynamicMetadataRequest, swift::EncodedSequence<swift::irgen::MetadataPath::Component>::Map<swift::irgen::MetadataResponse>*) const + 160
22 swift                    0x000000010e1ad124 swift::irgen::LocalTypeDataCache::tryGet(swift::irgen::IRGenFunction&, swift::irgen::LocalTypeDataKey, bool, swift::irgen::DynamicMetadataRequest) + 1140
23 swift                    0x000000010e1acbff swift::irgen::IRGenFunction::tryGetLocalTypeMetadata(swift::CanType, swift::irgen::DynamicMetadataRequest) + 95
24 swift                    0x000000010e046762 swift::irgen::emitArchetypeTypeMetadataRef(swift::irgen::IRGenFunction&, swift::CanTypeWrapper<swift::ArchetypeType>, swift::irgen::DynamicMetadataRequest) + 50
25 swift                    0x000000010e1b86c1 emitDirectTypeMetadataRef(swift::irgen::IRGenFunction&, swift::CanType, swift::irgen::DynamicMetadataRequest) + 1249
26 swift                    0x000000010e1b7f72 swift::irgen::IRGenFunction::emitTypeMetadataRef(swift::CanType, swift::irgen::DynamicMetadataRequest) + 130
27 swift                    0x000000010e1b81aa swift::irgen::IRGenFunction::emitTypeMetadataRef(swift::CanType) + 58
28 swift                    0x000000010ed392fe bool llvm::function_ref<bool (swift::CanType)>::callback_fn<swift::CanType::visit(llvm::function_ref<void (swift::CanType)>) const::'lambda'(swift::Type)>(long, swift::CanType) + 30
29 swift                    0x000000010f2edf7e swift::Type::findIf(llvm::function_ref<bool (swift::Type)>) const::Walker::walkToTypePre(swift::Type) + 14
30 swift                    0x000000010f2fb265 (anonymous namespace)::Traversal::visitBoundGenericType(swift::BoundGenericType*) + 133
31 swift                    0x000000010f2facb2 swift::TypeVisitor<(anonymous namespace)::Traversal, bool>::visit(swift::Type) + 818
32 swift                    0x000000010f2fa8e8 swift::Type::walk(swift::TypeWalker&) const + 56
33 swift                    0x000000010f2dddd4 swift::Type::findIf(llvm::function_ref<bool (swift::Type)>) const + 36
34 swift                    0x000000010e18f701 (anonymous namespace)::IRGenSILFunction::bindArchetypes(swift::Type) + 161
35 swift                    0x000000010e18c370 swift::SILInstructionVisitor<(anonymous namespace)::IRGenSILFunction, void>::visit(swift::SILInstruction*) + 58128
36 swift                    0x000000010e17a722 swift::irgen::IRGenModule::emitSILFunction(swift::SILFunction*) + 8098
37 swift                    0x000000010e08f32b swift::irgen::IRGenerator::emitLazyDefinitions() + 1035
38 swift                    0x000000010e155de6 performIRGeneration(swift::IRGenOptions&, swift::ModuleDecl*, std::__1::unique_ptr<swift::SILModule, std::__1::default_delete<swift::SILModule> >, llvm::StringRef, swift::PrimarySpecificPaths const&, llvm::LLVMContext&, swift::SourceFile*, llvm::GlobalVariable**, unsigned int) + 1318
39 swift                    0x000000010e15628e swift::performIRGeneration(swift::IRGenOptions&, swift::SourceFile&, std::__1::unique_ptr<swift::SILModule, std::__1::default_delete<swift::SILModule> >, llvm::StringRef, swift::PrimarySpecificPaths const&, llvm::LLVMContext&, unsigned int, llvm::GlobalVariable**) + 94
40 swift                    0x000000010dfe4ec7 performCompile(swift::CompilerInstance&, swift::CompilerInvocation&, llvm::ArrayRef<char const*>, int&, swift::FrontendObserver*, swift::UnifiedStatsReporter*) + 16135
41 swift                    0x000000010dfdff74 swift::performFrontend(llvm::ArrayRef<char const*>, char const*, void*, swift::FrontendObserver*) + 2932
42 swift                    0x000000010df94c3d main + 685
43 libdyld.dylib            0x00007fff67dbcc8d start + 1
@belkadan
Copy link
Contributor Author

cc @DougGregor

@DougGregor
Copy link
Member

I have a fix for this, as part of #18562

@DougGregor
Copy link
Member

Scratch that; there's more than one issue here.

@DougGregor
Copy link
Member

Fixed by #18805

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@AnthonyLatsis AnthonyLatsis added the crash Bug: A crash, i.e., an abnormal termination of software label Dec 12, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself crash Bug: A crash, i.e., an abnormal termination of software regression source compatibility swift 5.0
Projects
None yet
Development

No branches or pull requests

3 participants