lib/Sema/TypeCheckPattern.cpp
@@ -792,6 +792,20 @@ static bool validateParameterType(ParamDecl *decl, DeclContext *DC,
   return hadError;
 }
 
+/// Given a type of a function parameter, request layout for any
+/// nominal types that IRGen could use as metadata sources.
+static void requestLayoutForMetadataSources(TypeChecker &tc, Type type) {
+  type->getCanonicalType().visit([&tc](CanType type) {
+    // Generic types are sources for typemetadata and conformances. If a
+    // parameter is of dependent type then the body of a function with said
+    // parameter could potentially require the generic type's layout to
+    // recover them.
+    if (auto *nominalDecl = type->getAnyNominal()) {
+      tc.requestNominalLayout(nominalDecl);
+    }
+  });
+}
+
 /// Request nominal layout for any types that could be sources of type metadata
 /// or conformances.
 void TypeChecker::requestRequiredNominalTypeLayoutForParameters(
@@ -800,13 +814,7 @@ void TypeChecker::requestRequiredNominalTypeLayoutForParameters(
     if (!param->hasInterfaceType())
       continue;
 
-    // Generic types are sources for typemetadata and conformances. If a
-    // parameter is of dependent type then the body of a function with said
-    // parameter could potentially require the generic type's layout to
-    // recover them.
-    if (auto *nominalDecl = param->getInterfaceType()->getAnyNominal()) {
-      requestNominalLayout(nominalDecl);
-    }
+    requestLayoutForMetadataSources(*this, param->getInterfaceType());
   }
 }
 
